# webassembly-rust-application

./: README.md
example/operation/: Cargo.toml  index.html  run.js
example/operation/src/: lib.rs
